<resources>
    <string name="agree">同意</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="close">关闭</string>
    <string name="error">错误</string>
    <string name="warning">警告</string>
    <string name="app_name">地铁网络购票</string>
    <string name="action_settings">设置</string>
    <string name="tools">工具</string>
    <string name="action_search">查找</string>

    <string name="retry">重试</string>

    <string name="click_avatar_to_login">请点击头像登录/注册</string>
    <string name="login_user_name">用户名</string>
    <string name="login_user_password">密码</string>
    <string name="login_user_password_update">新密码</string>
    <string name="login_user_password_captcha">验证码</string>

    <string name="login_submit">登 录</string>
    <string name="login_update">更新密码</string>
    <string name="login_update_e">Reset password</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_signup">注册账号</string>
    <string name="login_signup_e">Sign up</string>
    <string name="login_captcha">获取验证码</string>
    <string name="login_backup">登录模式</string>
    <string name="login_backup_e">Sign in</string>
    <string name="login_user_name_hint">请输入中国大陆11位手机号</string>
    <string name="login_user_pwd_hint">请输入 6~20 位密码</string>
    <string name="login_user_captcha_hint">请输入 6 位数字验证码</string>

    <string name="common_exit">退出</string>

    <string name="common_end">终点站</string>
    <string name="common_start">起始站</string>

    <string name="time_pay">购买时间</string>
    <string name="time_effect">有效时间</string>

    <string name="common_go_prep">到</string>
    <string name="common_from_prep">从</string>

    <string name="comeformthere">设为起始站</string>
    <string name="gotothere">设为终点站</string>

    <string name="choice_usual_route">选择路线</string>
    <string name="choose_station_route">选择站点/路线</string>
    <!-- ticket tab -->
    <string name="ticket_tab1">未取票</string>
    <string name="ticket_tab2">未支付</string>
    <string name="ticket_tab3">历史</string>

    <string name="ticket_mode_not_pay">未支付</string>
    <string name="ticket_mode_not_extract_ticket">未取票</string>
    <string name="ticket_mode_finished">已完成</string>
    <string name="ticket_mode_refunded">已退票</string>

    <!-- card view -->
    <string name="cardview_time">time</string>
    <string name="cardview_status">status</string>

    <!-- dialog -->
    <string name="cardview_dialog_transition">cardview_dialog_transition</string>
    <string name="choose">确认</string>
    <string name="choice_city">选择城市</string>
    <string name="exit_dialog">确认退出?</string>
    <string name="exit_dialog_content">您未完成的订单将不会被保存</string>

    <string name="error_failure_to_get_ticket_info">未能正确得到所查询的路线票务</string>
    <string name="error_none_ticket_info">读取列表中．．．</string>
    <string name="error_failure_to_get_subway_list">获取站点列表失败</string>

    <string name="post_bill">提交订单</string>
    <string name="cancel_bill">取消订单</string>
    <string name="pay_bill">支付订单</string>
    <string name="refund">退票</string>
    <string name="pay_bill_now">现在支付</string>
    <string name="pay_bill_not_now">暂不支付</string>

    <string name="ticket_count">购票张数</string>
    <string name="ticket_all_pay">总金额</string>
    <string name="ticket_pay">单价</string>
    <string name="order_id">订单号</string>
    <string name="order_detail">订单详情</string>
    <string name="order_status">订单状态</string>
    <string name="view_detail">查看详情</string>

    <string name="search_hint">搜索您的目的地</string>

    <string name="copy_right">Copyrights Crepusculo © %1$d</string>

    <string name="BEIJING_ID">1</string>

    <string name="alipay">支付宝</string>
    <string name="wechat_pay">微信支付</string>
    <string name="qr">二维码</string>

    <string name="my_orders">我的订单</string>
    <string name="account_settings">账号设置</string>
    <string name="about_me">关于应用</string>
    <string name="account_safety">账号安全</string>
    <string name="action_modify_password">修改密码</string>
    <string name="other">其它</string>
    <string name="action_logout">注销账号</string>

    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="search_order">搜索订单</string>

    <string name="query_cancel_bill">确定取消该订单吗？</string>
    <string name="query_refund">确定要退掉该订单中所有未取出的票吗？</string>

    <string name="tip_pay_within_anhour">提交订单后请于60分钟内（并不超过次日0:00）完成支付，否则订单将自动取消。</string>
    <string name="tip_auto_refund">乘客只能当日购票与取票，当日未取出的票将于次日0:00统一作自动退票处理。</string>
    <string name="network_error">网络错误或访问超时</string>
    <string name="token_invalid">登录状态失效，请重新登录</string>
</resources>
