<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/action_reset_pwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@color/primary"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="32dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/ori_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:hint="@string/login_user_password"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColorHint="@color/md_white_1000"
            app:met_baseColor="@color/md_white_1000"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/md_white_1000"
            app:met_helperText="@string/login_user_pwd_hint"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/md_white_1000" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_lock_white_24dp"
            android:hint="@string/login_user_password_update"
            android:inputType="textPassword"
            android:maxLength="20"
            android:textColorHint="@color/md_white_1000"
            app:met_baseColor="@color/md_white_1000"
            app:met_clearButton="true"
            app:met_floatingLabel="highlight"
            app:met_floatingLabelTextColor="@color/md_white_1000"
            app:met_helperText="@string/login_user_pwd_hint"
            app:met_maxCharacters="11"
            app:met_primaryColor="@color/md_white_1000" />

        <Button
            android:id="@+id/nextButton"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/login_update"
            android:textColor="@color/md_white_1000"
            android:textSize="16sp" />

        <fr.castorflex.android.smoothprogressbar.SmoothProgressBar xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/primary"
            android:indeterminate="true"
            android:visibility="invisible"
            app:spb_color="@color/md_amber_400"
            app:spb_mirror_mode="false"
            app:spb_progressiveStart_activated="true"
            app:spb_progressiveStart_speed="1.5"
            app:spb_progressiveStop_speed="3.4"
            app:spb_reversed="false"
            app:spb_sections_count="4"
            app:spb_speed="2.0"
            app:spb_stroke_separator_length="4dp"
            app:spb_stroke_width="4dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

    </LinearLayout>

</LinearLayout>