<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/qr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/qr"
        android:scaleType="fitXY"
        android:src="@drawable/ic_qr" />

    <LinearLayout
        style="@style/AppTheme.Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.Clear.EditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_time_primary_24dp"
            android:text="@string/time_effect"
            android:textColor="@color/primary"
            android:theme="@style/AppTheme.CardView.Title" />

        <EditText
            android:id="@+id/effect_date"
            style="AppTheme.Clear.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="text"
            android:linksClickable="false"
            android:longClickable="false"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.Clear.EditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_cash_primary_24dp"
            android:text="@string/ticket_pay"
            android:textColor="@color/primary"
            android:theme="@style/AppTheme.CardView.Title" />

        <EditText
            android:id="@+id/ticket_price"
            style="AppTheme.Clear.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="text"
            android:linksClickable="false"
            android:longClickable="false"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.Clear.EditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_num_0_primary_24dp"
            android:text="@string/ticket_count"
            android:textColor="@color/primary"
            android:theme="@style/AppTheme.CardView.Title" />

        <EditText
            android:id="@+id/amount"
            style="AppTheme.Clear.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="text"
            android:linksClickable="false"
            android:longClickable="false"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black" />
    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.Clear.EditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_cash_primary_24dp"
            android:text="@string/ticket_all_pay"
            android:textColor="@color/primary"
            android:theme="@style/AppTheme.CardView.Title" />

        <EditText
            android:id="@+id/ticket_total"
            style="AppTheme.Clear.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="text"
            android:linksClickable="false"
            android:longClickable="false"
            android:textColor="@color/text_black"
            android:textColorHint="@color/text_black" />

    </LinearLayout>
</LinearLayout>