<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_time_black_24dp"
                    android:tint="@color/light_secondary_text"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/start_date"/>

                <EditText
                    android:id="@+id/edit_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:inputType="textNoSuggestions"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_time_black_24dp"
                    android:tint="@color/light_secondary_text"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/end_date"/>

                <EditText
                    android:id="@+id/edit_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:inputType="textNoSuggestions"/>
            </LinearLayout>

            <Button android:id="@+id/btn_search_history_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorAccent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text_size"
                android:text="@string/search_order"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:drawablePadding="16dp"
                    android:drawableTop="@drawable/ic_alert"
                    android:gravity="center"
                    android:visibility="gone"
                    android:text="@string/error_none_ticket_info"
                    android:textColor="@color/light_secondary_text" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>
</LinearLayout>