<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/card_view"
        style="@style/AppTheme.CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="250dp"
        android:stateListAnimator="@animator/raise_z"
        android:theme="@style/AppTheme.CardView"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp">

        <LinearLayout
            style="@style/AppTheme.CardView.NoPadding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:theme="@style/AppTheme.CardView.NoPadding">

            <LinearLayout
                style="@style/AppTheme.CardView.NoPadding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:theme="@style/AppTheme.CardView.NoPadding">

                <LinearLayout
                    style="@style/AppTheme.Clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:theme="@style/AppTheme.CardView.NoPadding">

                    <TextView
                        android:id="@+id/start_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/common_start"
                        android:theme="@style/AppTheme.CardView.Title" />

                    <ImageButton
                        android:id="@+id/start_pic"
                        style="@style/AppTheme.Clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:src="@drawable/ic_right_bottom_arrow_24dp"
                        android:theme="@style/AppTheme.CardView.Title" />

                    <TextView
                        android:id="@+id/start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme.CardView.Title" />

                </LinearLayout>


                <LinearLayout
                    style="@style/AppTheme.Clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/destination_title"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/common_end"
                        android:theme="@style/AppTheme.CardView.Title" />

                    <ImageButton
                        android:id="@+id/destination_pic"
                        style="@style/AppTheme.Clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:paddingEnd="8dp"
                        android:paddingStart="8dp"
                        android:src="@drawable/ic_right_top_arrow_24dp"
                        android:theme="@style/AppTheme.CardView.Title" />

                    <TextView
                        android:id="@+id/destination"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:theme="@style/AppTheme.CardView.Title" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_linear_1"
                style="@style/AppTheme.Clear.Distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_time_black_24dp"
                    android:gravity="center_vertical"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/time_pay"
                    android:theme="@style/AppTheme.CardView.Text" />

                <TextView
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingEnd="4dp"
                    android:paddingStart="32dp"
                    android:theme="@style/AppTheme.CardView.Text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_linear_2"
                style="@style/AppTheme.Clear.Distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/date_limit_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_time_black_24dp"
                    android:gravity="center_vertical"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/time_effect"
                    android:theme="@style/AppTheme.CardView.Text" />

                <TextView
                    android:id="@+id/date_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingEnd="4dp"
                    android:paddingStart="32dp"
                    android:theme="@style/AppTheme.CardView.Text" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        style="@style/AppTheme.Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.Clear.EditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_num_0_primary_24dp"
            android:text="@string/ticket_count"
            android:textColor="@color/primary"
            android:theme="@style/AppTheme.CardView.Title" />

        <EditText
            android:id="@+id/count"
            style="AppTheme.Clear.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:digits="0123456789"
            android:gravity="center"
            android:hint="0"
            android:maxLength="5"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:singleLine="true" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.Clear.EditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_cash_primary_24dp"
            android:text="@string/ticket_pay"
            android:textColor="@color/primary"
            android:theme="@style/AppTheme.CardView.Title" />

        <EditText
            android:id="@+id/price"
            style="AppTheme.Clear.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="textNoSuggestions"
            android:textColorHint="@color/text_black"
            android:textColor="@color/text_black" />

    </LinearLayout>

    <LinearLayout
        style="@style/AppTheme.Clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/AppTheme.Clear.EditText">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_cash_primary_24dp"
            android:text="@string/ticket_all_pay"
            android:textColor="@color/primary"
            android:theme="@style/AppTheme.CardView.Title" />

        <EditText
            android:id="@+id/show_money"
            style="AppTheme.Clear.EditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            android:editable="false"
            android:enabled="false"
            android:gravity="center"
            android:inputType="textNoSuggestions"
            android:textColorHint="@color/text_black"
            android:textColor="@color/text_black" />

    </LinearLayout>

    <Button
        style="@style/AppTheme.Button"
        android:theme="@style/AppTheme.Button"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:padding="8dp"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_bold_hexagon_outline"
        android:drawablePadding="8dp"
        android:minWidth="150dp"
        android:id="@+id/check_button"
        android:text="@string/post_bill"
        />

</LinearLayout>